--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>springmvc-01-servlet</module>
+        <module>springmvc-02-hellomvc</module>
+        <module>springmvc-03-annotation</module>
+        <module>springmvc-04-controller</module>
     </modules>
     <dependencies>
     <dependency>
